[project]
name = "marko"
version = "0.1.0"
description = ""
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "commonmark (>=0.9.1,<0.10.0)",
    "markdown (>=3.8,<4.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "mistune (>=3.1.3,<4.0.0)",
    "mistletoe (>=1.4.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
python-slugify = "^8.0.4"

