[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
    {name = "Jeff-Lowrey", email = "jeff@jaral.org"},
]
dynamic = ["version"]
requires-python = "==3.13.*"
license = {text = "MIT"}
dependencies = []
description = "Default template for PDM package"
name = "marko"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
version = "0.1.0"

[project.urls]
homepage = "https://github.com/frostming/marko"
Documentation = "https://marko-py.readthedocs.io"

[project.optional-dependencies]
toc = ["python-slugify"]
codehilite = ["pygments"]
repr = ["objprint"]

[project.scripts]
marko = "marko.cli:main"

[tool.pdm]
plugins = [
    "pdm-autoexport",
]
distribution = false

[tool.pdm.version]
source = "file"
path = "marko/__init__.py"

[tool.pdm.dev-dependencies]
benchmark = [
    "commonmark>=0.9",
    "markdown>=3.3",
    "markdown-it-py>=2.0; python_version >= '3.7'",
    "mistune>=2.0",
    "mistletoe>=0.7",
]
dev = [
    "pytest",
    "pytest-cov",
    "mypy>=0.950",
]
doc = [
    "marko[toc]",
    "sphinx>=5.3.0",
    "shibuya>=2023.6.8",
]

[[tool.pdm.autoexport]]
filename = "docs/reqs.txt"
groups = ["doc"]
without-hashes = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
mypy_path = "."
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
